# rage

./: .gitignore  Cargo.toml  README.md  buildxl_detoured_functions.cpp  buildxl_sandboxing.md  typescript
.cargo/: config.toml
.github/workflows/: ci.yml
crates/artifact-store/: Cargo.toml
crates/artifact-store/src/: content_hash.rs  lib.rs  local.rs  package_manifest.rs
crates/build-graph/: Cargo.toml
crates/build-graph/src/: dag.rs  dot.rs  lib.rs  topo.rs
crates/cache/: Cargo.toml
crates/cache/src/: azure.rs  entry.rs  fingerprint.rs  lib.rs  local.rs  output_store.rs  pathset_store.rs  provider.rs  s3.rs  strong_fp.rs  task_stats.rs  tool_hash.rs  two_phase.rs  weak_fp.rs  why_miss.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: integration.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: daemon.rs  discovery.rs  http.rs  lib.rs  messages.rs  reconciler.rs  socket.rs  state.rs  transport.rs  watcher.rs
crates/daemon/static/: index.html  test_index_html.py
crates/daemon/tests/: ws_retry.rs
crates/hub/: Cargo.toml  build.rs
crates/hub/src/: dag.rs  lib.rs  rendezvous.rs  server.rs
crates/pipeline-config/: Cargo.toml
crates/pipeline-config/src/: config.rs  lib.rs  policy.rs
crates/plugin/: Cargo.toml
crates/plugin-typescript/: Cargo.toml
crates/plugin-typescript/src/: lib.rs  lockfile.rs  pathset_extractor.rs  postinstall.rs
crates/plugin/src/: lib.rs  types.rs
crates/sandbox/: Cargo.toml  build.rs
crates/sandbox-linux-ebpf/: Cargo.toml  build.rs
crates/sandbox-linux-ebpf-prog/: Cargo.toml
crates/sandbox-linux-ebpf-prog/src/: main.rs
crates/sandbox-linux-ebpf/src/: lib.rs  linux.rs  stub.rs
crates/sandbox-macos-dylib/: Cargo.toml
crates/sandbox-macos-dylib/src/: client.rs  interpose.rs  lib.rs
crates/sandbox-windows-detours/: Cargo.toml
crates/sandbox-windows-detours/src/: hooks.rs  ipc.rs  lib.rs
crates/sandbox/src/: event.rs  lib.rs  linux.rs  macos.rs  mock.rs  pipe_proto.rs  server.rs  unsupported.rs  windows.rs
crates/sandbox/tests/: symlink_poc.rs  windows_integration.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: artifact_capture.rs  artifact_restore.rs  bin_links.rs  lib.rs  node_path.rs  postinstall_cache.rs  resource_budget.rs  rss_monitor.rs  runner.rs  shell.rs  task.rs
crates/scoping/: Cargo.toml
crates/scoping/src/: affected.rs  git.rs  lib.rs
crates/spoke-client/: Cargo.toml  build.rs
crates/spoke-client/src/: lib.rs
crates/workspace-tools/: Cargo.toml
crates/workspace-tools/src/: detect.rs  discovery.rs  graph.rs  lib.rs  package.rs
docker/: Dockerfile.hub-spoke  Dockerfile.linux-test  Dockerfile.sandbox-test  compose.hub-spoke.yaml  docker-compose.sandbox.yml  docker-compose.test.yml  test-linux-ebpf.sh  test-remote-cache.sh
docs/architecture/: CACHING.md  COMPARISON.md  DISTRIBUTED.md  INSTALL-CACHING.md  OVERVIEW.md  SANDBOX.md
docs/design/: install-artifact-cache.md
docs/plans/: 2026-04-24-phase10-daemon.md  2026-04-24-phase11-http-ws-status.md  2026-04-24-phase1a-workspace-tools.md  2026-04-24-phase1b-build-graph-cli.md  2026-04-24-phase2-scheduler.md  2026-04-24-phase3-local-cache.md  2026-04-24-phase4-scoping.md  2026-04-24-phase5-affected-flag.md  2026-04-24-phase6-pipeline-config-wiring.md  2026-04-24-phase7-sandbox-macos.md  2026-04-24-phase8-ecosystem-plugin.md  2026-04-24-phase9-two-phase-cache.md  2026-04-24-rage-daemon-config-cache-design.md  2026-04-25-phase-artifact-a-foundation.md  2026-04-25-phase-artifact-b-integration.md  2026-04-25-phase1-node-modules-path-injection.md  2026-04-25-phase1-nodejs-path-injection.md  2026-04-25-phase12-root-install-task.md  2026-04-25-phase2-declared-input-globs.md  2026-04-25-phase3-abi-fingerprint.md  2026-04-25-phase4-linux-ebpf.md  2026-04-25-phase5a-why-miss.md  2026-04-25-phase5b-output-capture.md  2026-04-25-phase6-remote-cache.md  2026-04-26-distributed-builds-plan.md  2026-04-26-lockfile-cas-plan.md  2026-04-26-postinstall-cache-v2.md  2026-04-26-postinstall-tasks-plan.md  2026-04-27-windows-detours-sandbox.md  2026-04-29-windows-support-design.md  2026-04-29-windows-support-phase1.md  2026-04-29-windows-support-phase2.md  2026-04-29-windows-support-phase3.md  2026-04-30-e2e-fixtures-design.md  2026-04-30-e2e-fixtures-phase1.md  2026-04-30-e2e-fixtures-phase2.md
docs/strategy/: market-brief.html
docs/superpowers/specs/: 2026-04-27-rage-example-fluentui-design.md
fixtures/js-npm/: package.json
fixtures/js-pnpm/: package.json
fixtures/js-yarn/: package.json
proto/: coordinator.proto
scripts/: test-distributed.sh  test-postinstall-cache.sh
tests/fixtures/: counter.cjs  run.mjs
tests/fixtures/cache-correctness/: package.json  pnpm-lock.yaml
tests/fixtures/diamond-dep/: .gitignore  package.json  pnpm-lock.yaml  rage.json
tests/fixtures/distributed/: .gitignore  package.json  pnpm-lock.yaml  rage.json  tsconfig.base.json
tests/fixtures/error-propagation/: package.json  pnpm-lock.yaml
tests/fixtures/partial-rebuild/: package.json  pnpm-lock.yaml  tsconfig.base.json
