[workspace]
resolver = "2"
members = [
    "crates/workspace-tools",
    "crates/build-graph",
    "crates/pipeline-config",
    "crates/scheduler",
    "crates/artifact-store",
    "crates/cache",
    "crates/scoping",
    "crates/daemon",
    "crates/cli",
    "crates/sandbox",
    "crates/sandbox-macos-dylib",
    "crates/sandbox-windows-detours",
    "crates/plugin",
    "crates/plugin-typescript",
    "crates/sandbox-linux-ebpf",
    "crates/hub",
    "crates/spoke-client",
]

[workspace.package]
edition = "2021"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/microsoft/rage"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
pathdiff = "0.2"
