[package]
    name = "cache"
    version = "0.0.0"
    edition.workspace = true
    rust-version.workspace = true
    license.workspace = true
    repository.workspace = true

    [lints]
    workspace = true

    [dependencies]
    blake3 = "1"
    walkdir = "2"
    serde = { version = "1", features = ["derive"] }
    serde_json = "1"
    anyhow = "1"
    globset = "0.4"
    hex = "0.4"
    plugin = { path = "../plugin" }
    sandbox = { path = "../sandbox" }

    [dev-dependencies]
    tempfile = "3"
    