[package]
    name = "cache"
    version = "0.0.0"
    edition.workspace = true
    rust-version.workspace = true
    license.workspace = true
    repository.workspace = true

    [lints]
    workspace = true

    [features]
    default = []
    # Enable to compile the S3-compatible remote cache backend
    s3 = ["dep:aws-sdk-s3", "dep:aws-config", "dep:tokio"]
    # Enable to compile the Azure Blob Storage remote cache backend
    azure = ["dep:azure_storage_blobs", "dep:azure_storage", "dep:tokio"]

    [dependencies]
    blake3 = "1"
    walkdir = "2"
    serde = { version = "1", features = ["derive"] }
    serde_json = "1"
    anyhow = "1"
    globset = "0.4"
    hex = "0.4"
    plugin = { path = "../plugin" }
    sandbox = { path = "../sandbox" }
    # Runtime needed for blocking on async remote ops inside sync trait methods
    tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
    # S3 backend (optional)
    aws-sdk-s3 = { version = "1", optional = true }
    aws-config = { version = "1", optional = true }
    # Azure Blob backend (optional)
    azure_storage = { version = "0.21", optional = true }
    azure_storage_blobs = { version = "0.21", optional = true }

    [dev-dependencies]
    tempfile = "3"
