[package]
name = "rage-cli"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "rage"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
build-graph = { path = "../build-graph" }
pipeline-config = { path = "../pipeline-config" }
workspace-tools = { path = "../workspace-tools" }
scheduler = { path = "../scheduler" }
cache = { path = "../cache" }
scoping = { path = "../scoping" }
tokio = { version = "1", features = ["full"] }
daemon = { path = "../daemon" }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
