[package]
name = "rage-cli"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "rage"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
build-graph = { path = "../build-graph" }
pipeline-config = { path = "../pipeline-config" }
plugin = { path = "../plugin" }
plugin-typescript = { path = "../plugin-typescript" }
workspace-tools = { path = "../workspace-tools" }
scheduler = { path = "../scheduler" }
artifact-store = { path = "../artifact-store" }
cache = { path = "../cache", features = ["s3", "azure"] }
scoping = { path = "../scoping" }
tokio = { version = "1", features = ["full"] }
daemon = { path = "../daemon" }
hub = { path = "../hub" }
spoke-client = { path = "../spoke-client" }
hostname = "0.4"
serde_json = "1"
webbrowser = "1"

[dev-dependencies]
tempfile = "3"
walkdir = "2"
tokio = { version = "1", features = ["full"] }
