[package]
name = "daemon"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "6"
blake3 = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

build-graph = { path = "../build-graph" }
workspace-tools = { path = "../workspace-tools" }
scheduler = { path = "../scheduler" }
pipeline-config = { path = "../pipeline-config" }

[dev-dependencies]
tempfile = "3"
