[package]
name = "daemon"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "6"
blake3 = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
futures-util = "0.3"
tokio-stream = "0.1"

build-graph = { path = "../build-graph" }
workspace-tools = { path = "../workspace-tools" }
scheduler = { path = "../scheduler" }
pipeline-config = { path = "../pipeline-config" }

[dev-dependencies]
tempfile = "3"
tokio-tungstenite = "0.21"
serial_test = "3"
