    [package]
    name = "pipeline-config"
    version = "0.0.0"
    edition.workspace = true
    rust-version.workspace = true
    license.workspace = true
    repository.workspace = true

    [lints]
    workspace = true

    [dependencies]
    serde = { version = "1", features = ["derive"] }
    serde_json = "1"
    thiserror = "2"
    anyhow = "1"
    