[package]
name = "plugin-typescript"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
plugin = { path = "../plugin" }
pipeline-config = { path = "../pipeline-config" }
anyhow = "1"
blake3 = "1"
regex = "1"
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
