[package]
name = "sandbox-linux-ebpf"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1"
# aya and tokio are Linux-only runtime deps
[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.13", features = ["async_tokio"] }
bytes = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
