[package]
name = "sandbox-macos-dylib"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }

[lib]
name = "rage_sandbox"
crate-type = ["cdylib"]

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
ctor = "0.2"
