[package]
name = "sandbox-windows-detours"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints.rust]
# cdylib + FFI + inline patching require unsafe — override the workspace forbid.
unsafe_code = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }

[lib]
name = "rage_sandbox"
crate-type = ["cdylib"]

[target.'cfg(windows)'.dependencies]
# Use GenericDetour (stable Rust). The static-detour feature requires
# nightly; we store detours in OnceLock<GenericDetour<...>> ourselves instead.
retour = { version = "0.3" }
# Note: in windows-sys 0.59, CreateFileW is gated behind Win32_Security
# (it takes *const SECURITY_ATTRIBUTES).  GetCurrentProcessId likewise
# requires Win32_Security on some configurations.  Add it unconditionally.
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
] }
sandbox = { path = "../sandbox" }
