[package]
name = "sandbox"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1"
byteorder = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tempfile = "3"

# Linux eBPF sandbox (Linux-only)
[target.'cfg(target_os = "linux")'.dependencies]
sandbox-linux-ebpf = { path = "../sandbox-linux-ebpf" }

[build-dependencies]

[dev-dependencies]
tempfile = "3"
