[package]
name = "sandbox"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# The Windows named-pipe server (windows.rs) requires unsafe Win32 API calls,
# so we override the workspace `forbid` here with an explicit `allow`.
# All other lint settings are kept identical to the workspace defaults.
[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }

[dependencies]
anyhow = "1"
byteorder = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tempfile = "3"

# Linux eBPF sandbox (Linux-only)
[target.'cfg(target_os = "linux")'.dependencies]
sandbox-linux-ebpf = { path = "../sandbox-linux-ebpf" }

# Windows Detours sandbox
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }

[build-dependencies]

[dev-dependencies]
tempfile = "3"
