[package]
    name = "scheduler"
    version = "0.0.0"
    edition.workspace = true
    rust-version.workspace = true
    license.workspace = true
    repository.workspace = true

    [lints]
    workspace = true

    [dependencies]
    workspace-tools = { path = "../workspace-tools" }
    build-graph = { path = "../build-graph" }
    tokio = { version = "1", features = ["full"] }
    thiserror = "2"
    anyhow = "1"
    serde_json = "1"

    [dev-dependencies]
    tempfile = "3"
    