[package]
    name = "scheduler"
    version = "0.0.0"
    edition.workspace = true
    rust-version.workspace = true
    license.workspace = true
    repository.workspace = true

    [lints]
    workspace = true

    [dependencies]
    workspace-tools = { path = "../workspace-tools" }
    build-graph = { path = "../build-graph" }
    cache = { path = "../cache" }
    pipeline-config = { path = "../pipeline-config" }
    plugin = { path = "../plugin" }
    plugin-typescript = { path = "../plugin-typescript" }
    artifact-store = { path = "../artifact-store" }
    sandbox = { path = "../sandbox" }
    tokio = { version = "1", features = ["full"] }
    thiserror = "2"
    anyhow = "1"
    hex = "0.4"
    serde = { version = "1", features = ["derive"] }
    serde_json = "1"
    blake3 = "1"
    walkdir = "2"
    pathdiff = { workspace = true }

    [dev-dependencies]
    tempfile = "3"
    plugin = { path = "../plugin" }
    plugin-typescript = { path = "../plugin-typescript" }
