[package]
    name = "workspace-tools"
    version = "0.0.0"
    edition.workspace = true
    rust-version.workspace = true
    license.workspace = true
    repository.workspace = true

    [lints]
    workspace = true

    [dependencies]
    serde = { version = "1", features = ["derive"] }
    serde_json = "1"
    serde_yml = "0.0"
    walkdir = "2"
    glob = "0.3"
    thiserror = "2"
    anyhow = "1"
    